// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image with data should render an image with alt text 1`] = `
.c0 {
  padding-bottom: 16px;
  width: 100%;
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
</figure>
`;

exports[`Image with data should render an image with alt text and caption 1`] = `
.c1 {
  background-color: #d5d0cd;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 8px;
  font-size: 0.9375em;
  line-height: 1.125em;
}

.c0 {
  padding-bottom: 16px;
  width: 100%;
}

@media (min-width:37.5em) {
  .c1 {
    font-size: 0.875em;
  }
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <figcaption
    className="c1"
  >
    Study by the Home Office about the Syrian Vulnerable Persons Resettlement Scheme
  </figcaption>
</figure>
`;
